Generer pdfa (#101)
* Oppdattert apache httpcomponent til nyere versjon

* bup av versjoner

* revertert package.json for å sjekke om den er feilen

* oppgradert FE dependancies

* Endret navn på logbacfil for å dra ned byggtid

* Reverterer Fe biblioteker

* revertert

* Fjerner claspath til logback.xml da den nå følger standard navngivning

* Endret path til isalive og isready med internal og lagt til ny ingress for preprod pga deprecated

* Lagt til håndtering av flere lingresser

* revertert ingresser

* Innført preprod-fss og egne nais filer for preprod

* endret ingresser

* unngå bygg for main når endringene er for preprod

* tilpasset logg melding ved opprettelse av serviceklager

* Logger tema som blir klassifisert

* Økt antall podder til minimum 2 og satt maks 4

* Lagt til logback for test

* Kommentert ut springconfig for internal endepunkter og satt dem i yml

* Retting av på property navn, skal være ingresses. Endret hvordan ingresses blir initialiser fra environment fil

* Deploy feiler fortsatt, byttet til nais.yml i preprod-pipeline.yml og endret path til isAlive og isReady

* SD-1685-Behandling av serviceklage med stort arkivert dokument feiler.

* SD-1685-Behandling av serviceklage med stort arkivert dokument feiler. Eksperimentering for å få til vertikal scrolling når serviceklage PDFen er stor.

* SD-1685-Behandling av serviceklage med stort arkivert dokument feiler. Eksperimentering for å få til vertikal scrolling når serviceklage PDFen er stor.

* SD-1685-Behandling av serviceklage med stort arkivert dokument feiler. Eksperimentering for å få til vertikal scrolling når serviceklage PDFen er stor.

* SD-1685-Merget fra master og rettet opp feil på konfigurering av logging og innsamling av applikasjonsmetrics.

* SD-1691-Fikset feil på urler (q1 og prod) for å rute tilbake til Gosys etter vellykket ferdig behandling av serviceklage.

* POC loading state

* Css fiks for laster knapp sentrer